# iroh-private-network

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  install.sh
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/steeb_k/nullgate/: MainActivity.kt  NullgateApp.kt  PortraitCaptureActivity.kt  RustlsSetup.kt
android/app/src/main/java/io/github/steeb_k/nullgate/engine/: EngineHolder.kt  NullgateVpnService.kt
android/app/src/main/java/io/github/steeb_k/nullgate/ui/: AppScreen.kt  Dialogs.kt  NullgateTheme.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
crates/ipn-cli/: Cargo.toml
crates/ipn-cli/src/: main.rs
crates/ipn-core/: Cargo.toml
crates/ipn-core/examples/: conn_probe.rs  node_id.rs
crates/ipn-core/src/: admission.rs  conntrack.rs  engine.rs  lib.rs  membership.rs  network.rs  node.rs  presence.rs  roster.rs  router.rs  secrets.rs  tun_device.rs
crates/ipn-core/tests/: delete_e2e.rs  engine_e2e.rs  membership_docs.rs  originator_key_e2e.rs  protocol_version_e2e.rs  rotate_e2e.rs
crates/ipn-daemon/: Cargo.toml
crates/ipn-daemon/src/: main.rs  service.rs
crates/ipn-gui/: Cargo.toml  build.rs
crates/ipn-gui/src/: main.rs  style.css  tray.rs  windows.css
crates/ipn-ipc/: Cargo.toml
crates/ipn-ipc/src/: lib.rs  transport.rs
crates/ipn-mobile/: Cargo.toml  uniffi-bindgen.rs
crates/ipn-mobile/src/: lib.rs
docs/: README.md  android-packaging.md  architecture.md  building.md  development.md  linux-packaging.md  macos-packaging.md  releasing.md  security.md  windows-packaging.md
img/: icon-draft.xcf  icon-spin.xcf
packaging/linux/: INSTALL.txt  io.github.steeb_k.IPN.desktop  ipn-daemon.service  ipn-update.service  ipn-update.timer  ipnctl
scripts/: bundle-gtk-windows.ps1  package-linux.sh  package-macos.sh  run-android.ps1
wix/: nullgate.wxs
