[package]
name = "ipn-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Headless CLI client for the IPN daemon (scripting + testing)."

[[bin]]
name = "ipn-cli"
path = "src/main.rs"

[dependencies]
ipn-ipc = { path = "../ipn-ipc", features = ["transport"] }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
